--- a/Assignment FINAL.ipynb
+++ b/Assignment FINAL.ipynb
@@ -24,6 +24,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Exercise Eleven: PCA\n",
+    "I initially drew on the class example and the discussion of PCA in the Data-Sitters Club, which enabled the code to flow from the beginning.\n",
+    "\n",
+    "I went eleven toward collecting the texts from the use of .pdf files, mainly due to my usual use of research archives and libraries toward dissertational and assignment references. In this case, I explored lager .pdf's in the form of the Hollywood Reporter, mainly for its texted pages of industry, but also to see if it was doable with the gigabytes that were needed to explore even amidst imagery and photos, which allowed for favoritism with the OS module to become relevant to process the text as \"Codes are both reflective and predictive. They have a past and a future\" (Benjamin 6).\n",
+    "\n",
+    "Once this was established, the following directives were explored through the process:\n",
+    "\n",
+    "Isolate a component (the example was nouns - try verbs or adjectives) using nltk and prepare appropriate sub-files for comparison on that axis\n",
+    "Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
+    "Run a simple (2 word) visualization comparing all texts\n",
+    "Run a full (PCA) visualization comparing all texts using the provided PCA boilerplate. Note any interesting characteristics or outliers in a brief analysis.\n",
+    "Bonus Challenge: Depending on your interests, you might either try using an API to collect the texts rather than saving them to a directory, or you might use Bokeh to attempt an exportable visualization of some aspect of what you've collected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stage One: Import at least ten documents from files, using the OS module and any others relevant to process the text\n",
+    "I chose the use of the famed Hollywood Reporter out of respect for the gossip and news of the film industry as well as a defined use of the material as \"Modeling depends on source data\" (Drucker 171). And the great thing about the reference is that it comes in two forms when subscribing (educational discount), traditional widespread magazine and the .pdf versions. So, even though it was not my idea to get the magazine subscription as I am not a massive fan of the text, I could now challenge myself with this assignment -ya!. This enabled the use of Stylometry, which emphasizes the importance of modeling, to help \"answer questions about these documents\" (McCarty 2004a, 2004b)(Karsdorp, Kestemont, and Riddell 250). Now, we begin by not using the whole file but extracting the text (.pdf) available using pdfminer.six's assistance. And here, the use of gathering and filing the resources and files into a directory makes it easier to scan through the folder and pdf versions in use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The use of visualization has a component to enhance the journey since \"Problem solving is at the heart of tech\" (Benjamin 11). Text profiles came to life with these choices and began to signify that the process was on course, which opened the toward to the two factor and enlightened PCA. Here, the intersections became visual and allowed viewership to see the obvious to extreme significations, which brought in The Hollywood Reporter's components toward series and content found and focused on within the version recognized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to allow for the more minor texts to travel throughout. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. large document use or handling]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The big moment here was to evoke a streamlining and altering the introduced fuller version of the formulaic process of .txt focus from last week. Below there are alterations adjusted for the .pdf files, which warrants changes from this process introduced previously. And since there was a .pdf focus formulating viable output naming to adds '-nouns' version to be saved the chosen filename, the possibilities to open output files expanded as the .pdf,' is replaced by the '-nouns.txt.' Here the .txt becomes the output with more relatabilities and range to the formulations. Now, contemplating the errors=\"ignore\" vs. errors=\"replace,\" replace wins toward cleaning up the process more authentic with more solutions and options, keeping the journey streamlines and cleaner."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the element of use of PCA direction, \"import sklearn.decomposition\" allows for the comfort to \"reduce the dimensionality of\" the source that is explored (Karsdorp, Kestemont, and Riddell 268), which takes advantage of the release of a condensed or simplified data set. Now formulated a \"two-dimensional summary,\" reducing the focus accordingly toward a \"low-dimensional\" data set (Karsdorp, Kestemont, and Riddell 268), which helps bring in a more defined view below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, with the introduction to the variance of the \"principal component PC\" (Karsdorp, Kestemont, and Riddell 268), we can use the following code to create a data set of visualization to view beyond the authorial form and clustering. Now, connections become more visual in this visualization, and elements are enhanced toward areas of research focus. Here some areas are overlapped and begin to define even with the cluster some areas of impact and recognition. The great discovery of the processes from the change of .txt focus in our previous week's samples to the chosen and changed .pdf is that there are more possibilities. And most research that I come across is more viewed in the .pdf form, and the use of The Hollywood Reporter, even though more for just practice and play, there was an impact in finding that even within their larger form it was usable toward exploration, which may come in handy along the way down the road."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Project Overview: IMDb\n",
     "I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
     "\n"
@@ -34,6 +95,16 @@
    "metadata": {},
    "source": [
     "## Stage One: Dependencies\n",
+    "Now, in relation to the attempt to explore, To keep the direction within my API perspectives explored this semester, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment industry. This was a new but warranted area to examine due to practicing something off the grid with a Python app toward finding a minor query. With the help of the path being \"director/,\" I was off and running, as \"An interface can connect a person with a computer.., a computer with a computer (as in an API)\" (Drucker 172).\n",
+    "\n",
+    "import wikipedia\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "path = \"directors/\"\n",
+    "\n",
+    "\n",
+    "\n",
     "Other than representing my abbreviations of identity, IMDb is an Amazon setup toward the entertainment industry about film and cinema. I am bringing information attainable at the primary level toward consumer interest of film backgrounds to IMDb Pro stipulations that aid industry searches toward gaining knowledge and industry contacts. And with the enforcement of Beautiful Soup, the process begins packaged.\n",
     "\n",
     "\n",
@@ -75,6 +146,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Using the film industry's random gathering of directors listed on Wikipedia correctly to locate, the interesting component was that Sean Baker included the (filmmaker) tag but still came through on the choices. The only option that could not come on board and be documented in Wikipedia correctly was \"Sidney Poitier,\" which signified a \"GLITCH... a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity\" (Benjamin 77). As a result, he had to be replaced with another choice to move forward. Some of the code was familiar such as the filename and path that used replacements of spaces and underscores, which became readable toward bringing in the list becoming a defined .txt entity within the process and file. As a result, it enabled saving page content within the director's folder to become a viable entity to explore. Which enlisted \"The notion of \"cognitive load\" (how much mental work is required) is a consideration for all interface design\" (Drucker 178).\n",
+    "\n",
+    "directors = [\"Adam Curtis\",\"Mia Hansen-Love\",\"So Yong Kim\",\"Sean Baker\",\"Steven Spielberg\",\"Angelina Jolie\",\"George Lucas\",\"Jodie Foster\",\"Martin Scorsese\",\"Sofia Coppola\",\"Daniel Myrick\",\"M. Night Shyamalan\"]\n",
+    "for director in directors:\n",
+    "    page = wikipedia.page(director)\n",
+    "    print(page.title)\n",
+    "    filename = path + director.replace(\" \",\"_\") + \".txt\"\n",
+    "    with open (filename, \"w\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
+    "        f.write(page.content)\n",
+    "        f.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Below were the adjustments made with the focus of attributes of interest ranging from \"movie_title_arr\" to \"image_id_arr.\""
    ]
   },
@@ -90,6 +178,13 @@
     "movie_synopsis_arr =[]\n",
     "image_url_arr  = []\n",
     "image_id_arr = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Topic modeling aided the directors pulled in were now used as a resource toward a viable topic model presentation. Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished, which was stored and represented in the path \"directors/\" encasing file names. As a result, \"Feelings and stories of being surveilled are a form of evidence\" (Benjamin 80). While an \"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media)\" (Drucker 181)."
    ]
   },
   {
@@ -1182,6 +1277,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Used variance in code and color, and size enabled for visualized experimentation and expression, as \"The creation of digital assets will then serve the project's overall design\" (Drucker 193).\n",
+    "\n",
+    "Stop words associated with limiting items toward being helpful as \"In the documentary film DNA Dreams, viewers are taken inside of \"the world's largest genomics organization,\"...Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)\" (Benjamin 114). As a result, the \"wordcloud\" enhancement accompanied by STOPWORDs directed updates enhances the summary above intelligently.\n",
+    "\n",
+    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, signifying that “Knowledge of the existing tools and platforms for this aspect of research is important” (Drucker 199).\n",
+    "\n",
+    "I experimented with the range and size of indicators, etc., as “A platform with a broad user community is more likely to last—and to provide help support in the form of list-servs and other venues” (Drucker 199).\n",
+    "\n",
+    "Even though it is light in modes, HTML visual presentation, does show the separation of scores of sentiment, etc., separated by light and dark components, as \"a repository like GitHub ...is an invaluable resource for anyone working on digital project development” (Drucker 208).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing sklearn (scikit) learn's CountVectorizer, helps to enhance and organize a document-term matrix. This enables filtering with the removal of \"words, in this pedagogical setting to reduce the considerable time required to fit the topic model\" (Karsdorp, Kestemont, Riddell 297).\n",
+    "\n",
+    "n association with the use of the mixture model the \"topic-word distributions\" there was use of reference of \"document-topic distributions\" by importing \"sklearn.decomposition as decomposition model = decomposition.LatentDirichletAllocation( n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300). Here 100 topics to create patterns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 147,
    "metadata": {},
@@ -1193,6 +1313,15 @@
     "dtm=vectorizer.fit_transform(filenames).toarray() \n",
     "\n",
     "vocab=np.array(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Enforcing 17 articles/documents oddly coming together with the term matrix found in film as “One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84)."
    ]
   },
   {
@@ -1238,6 +1367,13 @@
     "assert model.components_.shape == (100, len(vocabulary))\n",
     "\n",
     "assert document_topic_distributions.shape == (dtm.shape[0], 100) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section, there was a use to take advantage of a parameter's topic association with a \"vocabulary element... converting the arrays which hold the parameter estimates into DataFrames with named rows and columns. topic_names = [f'Topic {k}' for k in range(100)] topic_worddistributions = pd.DataFrame( model.components, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301)."
    ]
   },
   {
@@ -1313,6 +1449,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This was an exploratory section where I altered the extraction direction through signification of \"document_topic_distributions.loc\" ['Topic's'] (Karsdorp, Kestemont, Riddell 301). Fame and fortune are represented with wiki research components \"The Matrix offers a potent allegory for thinking about power, technology, and society\" (Benjamin 84-85)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
@@ -1348,6 +1491,13 @@
    ],
    "source": [
     "topic_word_distributions.loc['Topic 9'].sort_values(ascending=False).head(18)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291)."
    ]
   },
   {
@@ -1412,6 +1562,22 @@
     "plt.imshow(wordcloud, interpolation='bilinear')\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The use of \"plotting, for each year,... can, in effect, calculate the total number of words in all opinions published in a given year associated with a topic by multiplying opinion lengths by the estimated topic shares\" (Karsdorp, Kestemont, Riddell 315).\n",
+    "\n",
+    "Stage Three: Using the sentiment analysis code as a starter, run a sentiment analysis on sample fragments from the documents and compare\n",
+    "The level of fandom in Wikipedia and what goes on the page enabled the analyzer to stand neutral on contributors who chose people they decide to write about as \"An interface constructs a narrative\" (Drucker 183).\n",
+    "\n",
+    "Notes: The compounded polarity of each article simulates differences or similarities of negative or positive sentence components. Filenames were explored locally, with folders created. In the end, encoding is not concerned about errors and send them to documents, printing them after filenames while checking out differences between large or small.\n",
+    "\n",
+    "\n",
+    "Achieved a significant moment of generating book novel set up and what words that follow. As many interfaces welcome the use of a \"universal\" reader with an \"omniscient\" viewer, \"but no such person exists, and each individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190).\n",
+    "\n"
    ]
   }
  ],
